1. 영문 String 리소스 추가 2. ResultActivity 메뉴 아이템(홍복 로고) 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "${rootProject.ext.androidBuildToolsVersion}"
 
     defaultConfig {
-        applicationId "com.tzutalin.dlibtest"
+        applicationId "com.hongbog.doubleueyed"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.releaseVersionCode
