--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.4'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
         classpath "com.github.dcendents:android-maven-gradle-plugin:1.4.1"
@@ -45,5 +45,7 @@ ext {
     targetSdkVersion = 25
     androidCompileSdkVersion = 27
     androidBuildToolsVersion = '27.0.0'
-    androidSupportSdkVersion = '25.3.1'
+//    androidSupportSdkVersion = '25.3.1'
+    androidSupportSdkVersion = '27.0.0'
+
 }
